--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>BENDIS</title>
+     <!-- IMPORTAR ICONOS -->
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!-- IMPORTAR CSS -->
+    <link rel="stylesheet" href="index.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>BENDIS</h1>
+     <!-- Cabecera -->
+     <header id = "header">
+        <button class = "categoria">
+            <span class="material-icons icons">menu</span>
+        </button>
+        <div class="menu">
+            <a class="menu-item">INICIO</a>
+            <a class="menu-item">PRODUCTOS</a>
+            <input type="text" placeholder="Buscar..." class="buscador">
+            <a class="menu-item">OPINIONES</a>
+            <a class="menu-item">CONTACTANOS</a>
+        </div>
+        <div class="logo">
+            <img src="img/logo.png" alt="Logo" width="100px">
+        </div>
+        
+        
+    </header>
+   
+
+    <!-- Esquina inferior -->
+     <div class = "Bendis">
+
+     </div>
 </body>
 </html>
