--- a/index.html
+++ b/index.html
@@ -14,29 +14,39 @@
 </head>
 
 <body>
-     <!-- Cabecera -->
-     <header id = "header">
-        <button class = "categoria">
-            <span class="material-icons icons">menu</span>
-        </button>
-        <div class="menu">
-            <a class="menu-item">INICIO</a>
-            <a class="menu-item">PRODUCTOS</a>
-            <input type="text" placeholder="Buscar..." class="buscador">
-            <a class="menu-item">OPINIONES</a>
-            <a class="menu-item">CONTACTANOS</a>
-        </div>
-        <div class="logo">
-            <img src="img/logo.png" alt="Logo" width="100px">
-        </div>
-        
-        
-    </header>
-   
 
-    <!-- Esquina inferior -->
-     <div class = "Bendis">
+    <div class = "pag1">
+        <!-- Cabecera -->
+        <header id = "header">
+            <button class = "categoria">
+                <span class="material-icons icons">menu</span>
+            </button>
+            <div class="menu">
+                <a class="menu-item">INICIO</a>
+                <a class="menu-item">PRODUCTOS</a>
+                <a><input type="text" placeholder="Buscar..." class="buscador"></a>
+                <a class="menu-item">OPINIONES</a>
+                <a class="menu-item">CONTACTANOS</a>
+            </div>
+            <div class="logo">
+                <img src="img/logo.png" alt="Logo" width="100px">
+            </div>
+        </header>
 
-     </div>
+        <!-- Contendio PAG 1 -->
+        <div class = "contendio">
+
+            <div class="centro">
+                <img src="/img/logo.png" alt="">
+            </div>
+            <!-- Esquina inferior -->
+            <div class = "esquinaInferior">
+                <p>2025</p>
+                <p>BENDIS nunca te dejara</p>
+            </div>
+
+
+        </div>
+    </div>
 </body>
 </html>
