Ajustar pagina final

--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
     <!-- Sobre nosotros -->
     <div class="sobreNosotros">
         <h1>Sobre nosotros</h1>
-        <p>Somos una empresa comprometida con la excelencia y la innovación. Nuestro equipo trabaja constantemente para ofrecer las mejores soluciones.</p>
+        <p>Somos una empresa comprometida con la excelencia y la innovación. Nuestro equipo trabaja constantemente para ofrecer las mejores soluciones.
+            Somos una empresa comprometida con la excelencia y la innovación. Nuestro equipo trabaja constantemente para ofrecer las mejores soluciones
+            Somos una empresa comprometida con la excelencia y la innovación. Nuestro equipo trabaja constantemente para ofrecer las mejores soluciones
+            Somos una empresa comprometida con la excelencia y la innovación. Nuestro equipo trabaja constantemente para ofrecer las mejores soluciones
+        </p>
     </div>
 
     <!-- Cuadros nosotros -->
@@ -124,12 +128,12 @@
         <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle Falsa 123, Ciudad</p>
     </div>
 
-   
+    <footer class = "footer">
+        <p>&copy; 2024 Empresa. Todos los derechos reservados.</p>
+    </footer>
 
 </div>
-<footer class = "footer">
-    <p>&copy; 2024 Empresa. Todos los derechos reservados.</p>
-</footer>
+
 
 
 </body>
