--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
 
     <!-- Información de contacto -->
     <div class="informacionContato">
-        <p><i class="fas fa-phone"></i> Teléfono: +34 123 456 789</p>
-        <p><i class="fas fa-envelope"></i> Email: contacto@empresa.com</p>
-        <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle Falsa 123, Ciudad</p>
+        <p><i class="telefono"></i> Teléfono: +34 123 456 789</p>
+        <p><i class="email"></i> Email: contacto@empresa.com</p>
+        <p><i class="direciccion"></i> Dirección: Calle Falsa 123, Ciudad</p>
     </div>
 
-    <footer class = "footer">
-        <p>&copy; 2024 Empresa. Todos los derechos reservados.</p>
-    </footer>
+  
 
 </div>
 
-
+<footer class = "footer">
+    <p>&copy; 2024 Empresa. Todos los derechos reservados.</p>
+</footer>
 
 </body>
 </html>
