--- a/Diseño/index.html
+++ b/Diseño/index.html
@@ -21,18 +21,14 @@
     <div class = "pag1">
         <!-- Cabecera -->
         <header id = "header">
-            <button class = "categoria">
-                <span class="material-icons icons">menu</span>
-            </button>
             <div class="menu">
-                <a class="menu-item">INICIO</a>
-                <a class="menu-item">PRODUCTOS</a>
-                <a><input type="text" placeholder="Buscar..." class="buscador"></a>
-                <a class="menu-item">OPINIONES</a>
-                <a class="menu-item">CONTACTANOS</a>
+                <a class="menu-inicio">INICIO</a>
+                <a class="menu-producto">PRODUCTOS</a>
+                <a class="menu-opiniones">OPINIONES</a>
+                <a class="menu-contacto">CONTACTANOS</a>
             </div>
             <div class="logo">
-                <img src="img/logo.png" alt="Logo" width="100px">
+                <img src="img/objeto.png" alt="Logo" width="100px">
             </div>
         </header>
 
